--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
