Finished css design for project search-sort-filter functionality

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "pg": "^8.2.1",
+    "url": "^0.11.0",
     "validator": "^13.1.1"
   }
 }
