--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "server": "npm start server.js",
     "serverNodemon": "nodemon server.js",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+	"dev": "concurrently \"npm run server\" \"npm run client\"",
+	"devNodemon": "concurrently \"npm run serverNodemon\" \"npm run client\"",
     "heroku-postbuild": "npm install --prefix ./client && npm audit fix && npm run build --prefix ./client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
