.env secrets have been changed and file is now git ignored. Also updating readme and npm commands to be easier for running locally

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-jwtSecret = ThisIsMySuperSecretJsonWebTokenKey!PleaseKeepItSecret0kay
+jwtSecret = ThisIsMyAmazingJsonWebTokenKeySecret!ItIsVeryGoodAndHardForSomeoneToBreak.ItEvenContainsSomeNumbers123
