--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "npm start --prefix ./client",
 	"dev": "concurrently \"npm run server\" \"npm run client\"",
 	"devNodemon": "concurrently \"npm run serverNodemon\" \"npm run client\"",
-    "heroku-postbuild": "npm install --prefix ./client && npm run build --prefix ./client",
+    "heroku-postbuild": "npm install --prefix ./client && npm audit fix --prefix ./client && npm run build --prefix ./client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
