--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
 		"react-scripts": "^3.4.3",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"sass": "^1.32.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
