Fixed vunerabilites with packages

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.27.0",
     "pg": "^8.2.1",
     "url": "^0.11.0",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "y18n": "^5.0.5"
   }
 }
