--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,12 @@
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "^3.4.3",
+		"react-scripts": "^4.0.3",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
-		"sass": "^1.32.2"
+		"sass": "^1.32.2",
+		"y18n": "^5.0.5"
 	},
 	"scripts": {
 		"start": "react-scripts start",
