--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "12.x"
-  },
-  "scripts": {
-    "server": "npm start server.js",
-    "serverNodemon": "nodemon server.js",
-    "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "devNodemon": "concurrently \"npm run serverNodemon\" \"npm run client\"",
-    "heroku-postbuild": "npm install --prefix ./client && npm audit fix --prefix ./client && npm run build --prefix ./client",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^5.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "fs-extra": "^9.0.1",
-    "http": "0.0.1-security",
-    "https": "^1.0.0",
-    "is-empty": "^1.2.0",
-    "jsdoc": "^3.6.6",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.27.0",
-    "pg": "^8.2.1",
-    "url": "^0.11.0",
-    "validator": "^13.1.1",
-    "y18n": "^5.0.5"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"engines": {
+		"node": "12.x"
+	},
+	"scripts": {
+		"server": "npm start server.js",
+		"serverNodemon": "nodemon server.js",
+		"client": "npm start --prefix ./client",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"devNodemon": "concurrently \"npm run serverNodemon\" \"npm run client\"",
+		"heroku-postbuild": "npm install --prefix ./client && npm audit fix --prefix ./client && npm run build --prefix ./client",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"concurrently": "^5.2.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"fs-extra": "^9.0.1",
+		"http": "0.0.1-security",
+		"https": "^1.0.0",
+		"is-empty": "^1.2.0",
+		"jsdoc": "^3.6.6",
+		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.27.0",
+		"pg": "^8.2.1",
+		"url": "^0.11.0",
+		"validator": "^13.1.1"
+	},
+	"proxy": "http://localhost:5000"
 }
