--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 		"is-empty": "^1.2.0",
 		"jwt-decode": "^2.2.0",
 		"moment": "^2.27.0",
+		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
