--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,10 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"ansi-regex": ">=5.0.1",
 		"axios": "^0.21.4",
 		"font-awesome": "^4.7.0",
 		"is-empty": "^1.2.0",
