--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"ansi-regex": ">=5.0.1",
 		"bcryptjs": "^2.4.3",
-		"concurrently": "^5.2.0",
+		"concurrently": "^6.3.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
