--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,22 @@
 		"font-awesome": "^4.7.0",
 		"is-empty": "^1.2.0",
 		"jwt-decode": "^2.2.0",
-		"moment": "^2.29.3",
+		"loader-utils": "^2.0.3",
+		"moment": "^2.29.4",
+		"nth-check": "^2.0.1",
 		"path-parse": "^1.0.7",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "^5.0.1",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
 		"sass": "^1.32.2"
+	},
+	"devDependencies": {
+		"react-scripts": "^5.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
