--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"ansi-regex": ">=5.0.1",
 		"axios": "^0.21.4",
+		"caniuse-lite": "^1.0.30001436",
 		"font-awesome": "^4.7.0",
 		"is-empty": "^1.2.0",
 		"jwt-decode": "^2.2.0",
