--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,16 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.2.1",
+		"@fortawesome/free-regular-svg-icons": "^6.2.1",
+		"@fortawesome/free-solid-svg-icons": "^6.2.1",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^7.2.1",
 		"ansi-regex": ">=5.0.1",
 		"axios": "^0.21.4",
 		"caniuse-lite": "^1.0.30001436",
-		"font-awesome": "^4.7.0",
 		"is-empty": "^1.2.0",
 		"jwt-decode": "^2.2.0",
 		"loader-utils": "^2.0.3",
