--- a/client/package.json
+++ b/client/package.json
@@ -24,13 +24,11 @@
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
+		"react-scripts": "^5.0.1",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
 		"sass": "^1.32.2"
-	},
-	"devDependencies": {
-		"react-scripts": "^5.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
